# crs-normalize-action

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/scripts/: make_fixtures.py
.github/workflows/: self-test.yml
examples/workflows/: check-on-pull-request.yml  fix-and-commit.yml  matrix-over-data-dirs.yml
scripts/: docker-smoke-test.sh
src/crs_normalize/: __init__.py  __main__.py  action.py  cli.py  codes.py  crs_utils.py  discovery.py  github.py  inspector.py  models.py  normalizer.py  reporting.py  scanner.py
tests/: conftest.py  test_action_outputs.py  test_cli.py  test_detection.py  test_discovery_and_github.py  test_normalize.py  test_reporting.py
