[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crs-normalize-action"
version = "1.0.0"
description = "Detect and fix mixed or missing coordinate reference systems in spatial datasets, in CI or on the command line."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Geospatial ETL" }]
keywords = ["gis", "crs", "projection", "reprojection", "pyproj", "geopandas", "rasterio", "github-actions"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: GIS",
  "Typing :: Typed",
]
dependencies = [
  "geopandas>=1.0",
  "shapely>=2.0",
  "pyproj>=3.6",
  "pyogrio>=0.9",
  "rasterio>=1.3",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
crs-normalize = "crs_normalize.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/crs_normalize"]

[tool.hatch.build.targets.sdist]
include = ["src/crs_normalize", "tests", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "D"]
ignore = [
  "D203",  # incompatible with D211, which we follow
  "D213",  # multi-line summaries start on the first line
  "D413",  # no blank line required after the last docstring section
  "D107",  # __init__ arguments are documented on the class docstring
  "N811",  # rasterio exports CRS as a class, not a constant
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
